--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser": "~12.0.0-rc.0",
     "@angular/platform-browser-dynamic": "~12.0.0-rc.0",
     "@angular/router": "~12.0.0-rc.0",
+    "@kolkov/angular-editor": "^1.1.7",
     "bootstrap": "^5.0.1",
     "jquery": "^3.6.0",
     "rxjs": "~6.6.0",
