--- a/package.json
+++ b/package.json
@@ -22,6 +22,11 @@
     "@angular/platform-browser": "~12.0.0-rc.0",
     "@angular/platform-browser-dynamic": "~12.0.0-rc.0",
     "@angular/router": "~12.0.0-rc.0",
+    "@fortawesome/angular-fontawesome": "^0.9.0",
+    "@fortawesome/fontawesome-svg-core": "^1.2.35",
+    "@fortawesome/free-brands-svg-icons": "^5.15.3",
+    "@fortawesome/free-regular-svg-icons": "^5.15.3",
+    "@fortawesome/free-solid-svg-icons": "^5.15.3",
     "@kolkov/angular-editor": "^1.1.7",
     "bootstrap": "^5.0.1",
     "jquery": "^3.6.0",
